--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-form": "^0.1.0",
     "next": "15.0.3",
     "pg": "^8.13.1",
