--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.5.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "next": "15.0.3",
     "pg": "^8.13.1",
     "react": "19.0.0-rc-66855b96-20241106",
